fix: Fix badge alignment

--- a/assets/styles/sections/about.scss
+++ b/assets/styles/sections/about.scss
@@ -54,7 +54,7 @@ $progress-bar-colors: (
 
 .about-section {
   .col-6 {
-    align-content: center;
+    // align-content: center;
   }
   .certificate-badge {
     text-align: -webkit-center;
